# FAB

./: .gitignore  AWShosts.txt  CMakeLists.txt  dc.sh  figSync.sh  grrsync.sh  kmdc.sh  lclfigSync.sh  lclpyrsync.sh  local.sh  mlpdc.sh  nmfdc.sh  pyrrsync.sh  pyrsync.sh  qgrsync.sh  rrsync.sh  rsync.sh  zmlp.sh
python/: KMgen.py  KMgen2.py  Kmeans.py  cdclr.py  eplot.py  kMparseLog.py  kMparseLog2.py  km-5-50-10k-s.csv  ldaplot.py  mKMgen.py  nKMgen.py  nmfeplot.py  nmfparseLog.py  parseLog.py  postprocessKM.py  postprocessKMthrd.py  thrdPP.sh
result/: lr-2.csv
src/: Makefile
src/common/: Makefile  Option.cpp  Option.h  Statistics.cpp  Statistics.h
src/data/: DataHolder.cpp  DataHolder.h  Loader.cpp  Loader.h  Makefile
src/distr/: Makefile  Master.cpp  Master.h  Runner.cpp  Runner.h  Worker.cpp  Worker.h
src/driver/: Makefile  MsgDriver.cpp  MsgDriver.h
src/logging/: Makefile
src/main/: CMakeLists.txt  Makefile  ParameterIO.cpp  ParameterIO.h  func.cpp  func.h  generate  generate.cpp  main  main.cpp  postprocess  postprocess.cpp
src/message/: MType.h
src/model/: CMakeLists.txt  CNN.cpp  CNN.h  GMM.cpp  GMM.h  Kernel.cpp  Kernel.h  KernelFactory.cpp  Kmeans.cpp  Kmeans.h  LDA.cpp  LDA.h  LogisticRegression.cpp  LogisticRegression.h  MLP.cpp  MLP.h  Makefile  Model.cpp  Model.h  NMF.cpp  NMF.h  Parameter.cpp  Parameter.h
src/network/: CMakeLists.txt  Makefile  NetworkImplMPI.cpp  NetworkThread.cpp  (+2 more)
test/: CMakeLists.txt  Makefile  communication  data-load  model-cnn  model-lr  model-mlp  mpitest.cpp  mw-simple  mw-thread  train-simple  unit-worker
(+21 files in other folders)
